Improve statistics template Fix responsiveness for navbar on mobile

--- a/web/css/style.css
+++ b/web/css/style.css
@@ -937,8 +937,12 @@ td.search {
     max-width: 150px;
     margin: 0 auto;
     text-align: center;
-    padding: 50px 0 0 0;
+    padding: 50px 0 50px 0;
     font-size: 40px;
+}
+
+.global-stats {
+    padding-bottom: 27px;
 }
 /******************************
 *******************************
@@ -1900,6 +1904,15 @@ span.orange {
 
 .navbar-mobile {
     display: none;
+    z-index: 10;
+}
+
+.navbar-mobile .collapse-quick-menu a {
+    color: #FFFFFF;
+}
+
+.navbar-mobile .collapse-brand {
+    color: #FFFFFF;
 }
 
 ul.dropdown-menu.dropdown-menu-mobile a {
@@ -1936,7 +1949,7 @@ ul.dropdown-menu.dropdown-menu-mobile a {
     }
 
     .collapse-quick-menu i {
-        margin: 0 10px;
+        margin: 0 12px;
         font-size: 15pt;
     }
 
@@ -2040,6 +2053,7 @@ ul.dropdown-menu.dropdown-menu-mobile a {
         vertical-align: bottom;
         font-size: 15pt;
         padding: 0 0 0 2px;
+        color: #3f5562;
     }
 }
 
@@ -2075,6 +2089,10 @@ ul.dropdown-menu.dropdown-menu-mobile a {
         width: 100%;
         max-width: 1200px !important;
     }
+
+    .collapse-quick-menu {
+        display: none;
+    }
 }
 
 @media screen and (max-width: 1200px) {
@@ -2096,5 +2114,17 @@ ul.dropdown-menu.dropdown-menu-mobile a {
         max-width: 50%;
         margin: 0 auto;
         padding: 0 0 10px 0;
+    }
+}
+
+@media screen and (max-width: 414px) {
+    .collapse-quick-menu i {
+        margin: 0 12px;
+        font-size: 11pt;
+        margin: 0 5px;
+    }
+
+    .collapse-quick-menu {
+        padding: 14px 0 0 0;
     }
 }
